--- a/TechnoWizardMovie/TechnoWizardMovie/Create-TechnoWizardMovie.html
+++ b/TechnoWizardMovie/TechnoWizardMovie/Create-TechnoWizardMovie.html
@@ -38,7 +38,7 @@
 <hr>
 <div class="row">
     <div class="col-md-4">
-        <form action="https://localhost:44320/Movies/Create" method="post" novalidate="novalidate">
+        <form action="https://w0771056.github.io/TechKing/TechnoWizardMovie/TechnoWizardMovie/Create-TechnoWizardMovie.html" method="post" novalidate="novalidate">
             
             <div class="form-group">
                 <label class="control-label" for="Title">Title</label>
