--- a/TechnoWizardMovie/TechnoWizardMovie/Create-TechnoWizardMovie.html
+++ b/TechnoWizardMovie/TechnoWizardMovie/Create-TechnoWizardMovie.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" href="https://localhost:44320/">TechnoWizardMovie</a>
+                <a class="navbar-brand" href="https://w0771056.github.io/TechKing/TechnoWizardMovie/TechnoWizardMovie/Home%20Page-TechnoWizardMovie.html">TechnoWizardMovie</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
