--- a/TechnoWizardMovie/TechnoWizardMovie/Create-TechnoWizardMovie.html
+++ b/TechnoWizardMovie/TechnoWizardMovie/Create-TechnoWizardMovie.html
@@ -18,10 +18,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://localhost:44320/Movies">Movies</a>
+                            <a class="nav-link text-dark" href="https://w0771056.github.io/TechKing/TechnoWizardMovie/TechnoWizardMovie/Index-TechnoWizardMovie.html">Movies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://localhost:44320/Home/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" href="https://w0771056.github.io/TechKing/TechnoWizardMovie/TechnoWizardMovie/Privacy%20Policy-TechnoWizardMovie.html">Privacy</a>
                         </li>
                     </ul>
                 </div>
@@ -68,7 +68,7 @@
 </div>
 
 <div>
-    <a href="https://localhost:44320/Movies">Back to List</a>
+    <a href="https://w0771056.github.io/TechKing/TechnoWizardMovie/TechnoWizardMovie/Index-TechnoWizardMovie.html">Back to List</a>
 </div>
 
 
@@ -77,7 +77,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            © 2022 - TechnoWizardMovie - <a href="https://localhost:44320/Home/Privacy">Privacy</a>
+            © 2022 - TechnoWizardMovie - <a href="https://w0771056.github.io/TechKing/TechnoWizardMovie/TechnoWizardMovie/Privacy%20Policy-TechnoWizardMovie.html">Privacy</a>
         </div>
     </footer>
     <script src="./Create-TechnoWizardMovie_files/jquery.min.js.download"></script>
