--- a/TechnoWizardMovie/TechnoWizardMovie/Create-TechnoWizardMovie.html
+++ b/TechnoWizardMovie/TechnoWizardMovie/Create-TechnoWizardMovie.html
@@ -18,7 +18,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://w0771056.github.io/TechKing/TechnoWizardMovie/TechnoWizardMovie/Index-TechnoWizardMovie.html">Movies</a>
+                            <a class="nav-link text-dark" asp-controller="Movies" asp-page="Index">Movies</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="https://w0771056.github.io/TechKing/TechnoWizardMovie/TechnoWizardMovie/Privacy%20Policy-TechnoWizardMovie.html">Privacy</a>
